--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+::-webkit-scrollbar{
+  width: 7px;
+  border-radius: 10px;
+  background-color: rgb(78, 78, 78);
+}
+::-webkit-scrollbar-thumb{
+  border-radius: 5px;
+  background-color: rgb(185, 182, 182);
+  width: 2px;
+}
+
+::-webkit-scrollbar-track{
+  box-shadow: inset 0 0 5px gray;
+  border-radius: 10px;
+}
 body{
   overflow-x: hidden;
 }
