--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,24 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-::-webkit-scrollbar{
-  width: 7px;
-  border-radius: 10px;
-  background-color: rgb(78, 78, 78);
-}
-::-webkit-scrollbar-thumb{
-  border-radius: 5px;
-  background-color: rgb(185, 182, 182);
-  width: 2px;
+body::-webkit-scrollbar {
+  display: none;
 }
 
-::-webkit-scrollbar-track{
-  box-shadow: inset 0 0 5px gray;
-  border-radius: 10px;
-}
-body{
+body {
   overflow-x: hidden;
 }
+
 @import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 .poppins-thin {
