--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,7 +13,7 @@ body {
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 .poppins-thin {
   font-family: "Poppins", sans-serif;
@@ -79,5 +79,27 @@ body {
   font-family: "Raleway", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
+  font-style: normal;
+}
+
+/* public/fonts/DIN-Regular.css */
+@font-face {
+  font-family: "DIN Regular";
+  src: url("./fonts/din-regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* public/fonts/DIN-Regular.css */
+@font-face {
+  font-family: "DIN Regular";
+  src: url("/fonts/DIN-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+.din-regular-font {
+  font-family: "DIN Regular", sans-serif;
+  font-weight: 700;
   font-style: normal;
 }
