--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,57 +14,57 @@ body {
 
 @import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-.poppins-thin {
-  font-family: "Poppins", sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=din:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+.din-thin {
+  font-family: "Din Regular", sans-serif;
   font-weight: 100;
   font-style: normal;
 }
 
-.poppins-extralight {
-  font-family: "Poppins", sans-serif;
+.din-extralight {
+  font-family: "Din Regular", sans-serif;
   font-weight: 200;
   font-style: normal;
 }
 
-.poppins-light {
-  font-family: "Poppins", sans-serif;
+.din-light {
+  font-family: "Din Regular", sans-serif;
   font-weight: 300;
   font-style: normal;
 }
 
-.poppins-regular {
-  font-family: "Poppins", sans-serif;
+.din-regular {
+  font-family: "Din Regular", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
 
-.poppins-medium {
-  font-family: "Poppins", sans-serif;
+.din-medium {
+  font-family: "Din Regular", sans-serif;
   font-weight: 500;
   font-style: normal;
 }
 
-.poppins-semibold {
-  font-family: "Poppins", sans-serif;
+.din-semibold {
+  font-family: "Din Regular", sans-serif;
   font-weight: 600;
   font-style: normal;
 }
 
-.poppins-bold {
-  font-family: "Poppins", sans-serif;
+.din-bold {
+  font-family: "Din Regular", sans-serif;
   font-weight: 700;
   font-style: normal;
 }
 
-.poppins-extrabold {
-  font-family: "Poppins", sans-serif;
+.din-extrabold {
+  font-family: "Din Regular", sans-serif;
   font-weight: 800;
   font-style: normal;
 }
 
-.poppins-black {
-  font-family: "Poppins", sans-serif;
+.din-black {
+  font-family: "Din Regular", sans-serif;
   font-weight: 900;
   font-style: normal;
 }
@@ -87,18 +87,5 @@ body {
   font-family: "DIN Regular";
   src: url("./fonts/din-regular.ttf") format("truetype");
   font-weight: normal;
-  font-style: normal;
-}
-
-
-.din-regular-font {
-  font-family: "DIN Regular", sans-serif;
-  font-weight: 700;
-  font-style: normal;
-}
-
-.din-normal-font {
-  font-family: "DIN Regular", sans-serif;
-  font-weight: 700;
   font-style: normal;
 }
